<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IDEActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_image"
        tools:context=".MainActivity">
    </LinearLayout>

    <Button
        android:id="@+id/buttonRun"
        android:layout_width="129dp"
        android:layout_height="61dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_begin"
        android:text="@string/run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toEndOf="@+id/buttonHelp" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="129dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_begin"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#e5ffc3"
        android:entries="@array/typeOfBlock"
        app:layout_constraintEnd_toStartOf="@+id/addBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addBlock"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/add"
        android:background="@drawable/button_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>